--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h2>Hello, PSPrice!</h2>
+    <div id="app"></div>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
